# parallel-sorting

median-of-medians/: benchmark.py  input_file  median-of-medians.py  sorting.py
parallel-sorting/: README.md  benchmark.py  meson.build  speedup.pkl  speedup2.pkl  viz.py
parallel-sorting/lib/: sorting.c
